name:                react-flux-example
version:             0.1.0.0
synopsis:            Small demo to play with ghcjs and react-flux
description:         Please see README.md
homepage:            https://github.com/agrafix/react-flux-example#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann
maintainer:          mail@athiemann.net
copyright:           2016 Alexander Thiemann <mail@athiemann.net>
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable react-flux-example
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Canvas
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , react-flux >= 1.0
                     , deepseq
                     , ghcjs-base
                     , aeson
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/react-flux-example
